Fix word-wrap styling of <pre> tags in status updates.
The reviews CSS generally has the same rules apply to regular reviews
and reviews included in status updates, but one thing that was missing
was the `word-wrap` rule applied to `<pre>` tags. This was buried inside
of `#reviews .review`, which isn't used for the status update entries.

This change consolidates everything under a single rule for
`pre.reviewtext`, which covers all comments and review body fields
across regular reviews and status updates.

Testing Done:
Created a review request with lots of different reviews and comments,
as well as initial and update status updates, which included long
single-line text for all the various fields. Saw that everything wrapped
correctly.

Reviewed at https://reviews.reviewboard.org/r/14057/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -726,10 +726,6 @@
     }
   }
 
-  .comment-text {
-    white-space: pre-wrap;
-  }
-
   .controls {
     list-style: none;
     margin: 0;
@@ -763,6 +759,10 @@
       .review-comments-inline();
     }
   }
+}
+
+pre.reviewtext {
+  white-space: pre-wrap;
 }
 
 #reviews {
@@ -912,10 +912,6 @@
 #reviews .review {
   .body {
     clear: both;
-
-    pre {
-      white-space: pre-wrap;
-    }
   }
 }
 
